Closed
Bug 1783566
Opened 10 months ago
Closed 10 months ago
Color selection text in the urlbar does not match Firefox's dark mode
Categories
(Core :: Widget: Win32, defect)
Core
Widget: Win32
Tracking
()
VERIFIED
FIXED
105 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox103 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | verified |
People
(Reporter: itiel_yn8, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR using Windows 10:
- Enable dark mode in about:addons
- Write anything in the urlbar
- Ctrl+A to select that text
The color selection text should be colored teal, instead it's blue (assumingly whatever is set as my Windows' accent color)
Comment 1•10 months ago
|
||
Set release status flags based on info from the regressing bug 1782858
status-firefox103:
--- → unaffected
status-firefox104:
--- → unaffected
status-firefox105:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Comment 2•10 months ago
|
||
:emilio, since you are the author of the regressor, bug 1782858, could you take a look?
For more information, please visit auto_nag documentation.
Flags: needinfo?(emilio)
Assignee | ||
Updated•10 months ago
|
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Assignee | ||
Comment 3•10 months ago
|
||
I accidentally changed it for the highlight / highlighttext colors.
Updated•10 months ago
|
Attachment #9288771 -
Attachment description: Bug 1783566 - Restore dark selection color behavior after bug 1782858. r=dao,spohl,mstange → Bug 1783566 - Restore dark highlight/selecteditem color behavior after bug 1782858. r=dao,spohl,mstange
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b1d670bfae76 Restore dark highlight/selecteditem color behavior after bug 1782858. r=mstange
Comment 5•10 months ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
Updated•9 months ago
|
QA Whiteboard: [qa-105b-p2]
Comment 6•9 months ago
|
||
I managed to reproduce this issue on a 2022-08-07 Nightly build on Windows 10 using the STR from the Description. Verified as fixed on Firefox 105.0b5(build ID: 20220830185924) and Nightly 106.0a1(build ID: 20220831215447) on Windows 10.
You need to log in
before you can comment on or make changes to this bug.
Description
•