Bug 1783566 - Restore dark highlight/selecteditem color behavior after bug 1782858. r=mstange

I accidentally changed it for the highlight / highlighttext colors.

Differential Revision: https://phabricator.services.mozilla.com/D153923